[tool.poetry]
name = "belvo_python_sample_app"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.scripts]
main = "src.belvo_python_sample_app.main:main"

[tool.poetry.dependencies]
python = "^3.8"
fern-belvo = "^0.0.22"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.6.0"
flake8 = "^5.0.4"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
